--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -36,11 +36,11 @@
           <input id="NumberOfStocks_id" name="antalAktier" type="number" max="99999" min="1" placeholder="1" required />
           <span id="totalPrice_id">0.00 DKK</span>
           <select name="porteføljeSelect" id="vælgPortefølje_id" required>
-            <option value="">Vælg portefølje</option>
+            <option value="">Choose portfolio</option>
           </select>
           
           <select name="kontoSelect" id="vælgKonto_id" required>
-            <option value="">Vælg konto</option>
+            <option value="">Choose account</option>
           </select>
                 
           <input type="hidden" name="aktieTickerValgt" id="aktieTickerValgt"/>
