--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -19,14 +19,14 @@
   <%- include('partials/sidebar') %>
 
   <div id="profileBox_id">
-    <h2 id="profiloplysninger_id">Skift Kode</h2>
+    <h2 id="profiloplysninger_id">Change password</h2>
     <form id="passwordForm">
       <input type="hidden" id="userId" value="<%= userId %>">
-      <input placeholder="Ny Adgangskode" id="newPassword" style="width: 300px;" required>
+      <input placeholder="New password" id="newPassword" style="width: 300px;" required>
       <br>
-      <input placeholder="Bekræft Adgangskode" id="confirmPassword" style="width: 300px;" required>
+      <input placeholder="Confirm password" id="confirmPassword" style="width: 300px;" required>
       <br>
-      <button type="button" id="gemÆndringer_id">Gem ændringer</button>
+      <button type="button" id="gemÆndringer_id">Save changes</button>
     </form>
     <p id="message" style="color: red;"></p>
   </div>
