--- a/views/partials/topbar.ejs
+++ b/views/partials/topbar.ejs
@@ -2,7 +2,7 @@
 <div id="topBar_id">
     <h1>PORTFOLIOTRACKER</h1>
     <form action="/logout" method="POST" style="display: inline;">
-      <button type="submit" id="logoutButton" title="Log ud">
+      <button type="submit" id="logoutButton" title="Log out">
         <span class="material-symbols-outlined">
           account_circle_off
         </span>
