--- a/views/accounts.ejs
+++ b/views/accounts.ejs
@@ -59,7 +59,7 @@
                     <form action="/withdraw" method="POST" style="display:inline;">
                       <input type="hidden" name="accountId" value="<%= account.id %>">
                       <input type="number" name="amount" placeholder="Beløb" step="0.01" required style="border-top-right-radius: 0px; border-bottom-right-radius: 0px;">
-                      <button type="submit" class="withdraw-account" style="border-top-right-radius: 5px; border-bottom-right-radius: 5px;">Payout</button>
+                      <button type="submit" class="withdraw-account" style="border-top-right-radius: 5px; border-bottom-right-radius: 5px;">Withdraw</button>
                     </form>
                     <% } %>
                       <form action="/close-account" method="POST" style="display:inline;">
