fil navne og sletter trade2

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8"> 
       <title>Login Form</title> <!-- Titel -->
-      <link rel="stylesheet" href="index_style.css"> <!-- Linker til en ekstern CSS-fil for styling -->
+      <link rel="stylesheet" href="indexStyle.css"> <!-- Linker til en ekstern CSS-fil for styling -->
    </head>
    <body>
       <div id="topBar_id"> <!-- En container til topbaren - bruger ikke modul da man ikke skal kunne logge ud -->
