--- a/views/portfolios.ejs
+++ b/views/portfolios.ejs
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Overview</title>
-    <link rel="stylesheet" href="portfolios_style.css">
-    <link href="shared_components.css" rel="stylesheet"> <!-- Linker til en ekstern CSS-fil for at style siden -->
+    <link rel="stylesheet" href="portfoliosStyle.css">
+    <link href="sharedComponents.css" rel="stylesheet"> <!-- Linker til en ekstern CSS-fil for at style siden -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
