--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfoliotracker - Market</title>
-  <link href="profile_style.css" rel="stylesheet">
-  <link href="shared_components.css" rel="stylesheet"> <!-- Linker til en ekstern CSS-fil for at style siden -->
+  <link href="profileStyle.css" rel="stylesheet">
+  <link href="sharedComponents.css" rel="stylesheet"> <!-- Linker til en ekstern CSS-fil for at style siden -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
