--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Transaktionsoversigt</title>
-  <link rel="stylesheet" href="/transactions_style.css">
+  <link rel="stylesheet" href="/transactionsStyle.css">
 </head>
 
 <body>
