--- a/views/accounts.ejs
+++ b/views/accounts.ejs
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Accounts</title>
-  <link rel="stylesheet" href="accounts_style.css">
-  <link href="shared_components.css" rel="stylesheet"> <!-- Linker til en ekstern CSS-fil for at style siden -->
+  <link rel="stylesheet" href="accountsStyle.css">
+  <link href="sharedComponents.css" rel="stylesheet"> <!-- Linker til en ekstern CSS-fil for at style siden -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
