--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfoliotracker - Dashboard</title>
-  <link href="dashboard_style.css" rel="stylesheet">
-  <link href="shared_components.css" rel="stylesheet">
+  <link href="dashboardStyle.css" rel="stylesheet">
+  <link href="sharedComponents.css" rel="stylesheet">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
