--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Gør siden responsiv på forskellige enheder -->
   <title>Create account</title> <!-- Titel-->
-  <link rel="stylesheet" href="signup_style.css"> <!-- Linker til en ekstern CSS-fil for at style signup-siden -->
+  <link rel="stylesheet" href="signupStyle.css"> <!-- Linker til en ekstern CSS-fil for at style signup-siden -->
 </head>
 
 <body>
