--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfoliotracker - Market</title>
-        <link href="trade_style.css" rel="stylesheet">
+        <link href="tradeStyle.css" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
         <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
-        <link href="shared_components.css" rel="stylesheet">
+        <link href="sharedComponents.css" rel="stylesheet">
     </head>
 </html>
 
